add examples for 'Running the oscillator'

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <ul>
         <li><a href="./examples/demo_01.html">Demo 01 | Basic</a></li>
+        <li><a href="./examples/demo_02.html">Demo 02 | Basic</a></li>
     </ul>
   </body>
 </html>
